# jsonplaceholder-typer

./: .gitignore  Dockerfile  pyproject.toml  pytest.ini
jsonplaceholder/: main.py
jsonplaceholder/cmd/: albums.py  comments.py  photos.py  posts.py  todos.py  users.py
jsonplaceholder/lib/: rest.py  util.py
tests/: test_jsonplaceholder.py  test_lib_rest.py
tests/cmd/: albums.py  comments.py  photos.py  posts.py  todos.py  users.py
tests/lib/: rest.py
