[tool.poetry]
name = "jsonplaceholder"
version = "0.1.0"
description = "Demo CLI app which uses jsonplaceholder to demonstrate Typer."
authors = ["Ahmetcan Güvendiren <ahm@glacion.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.6"
typer = "^0.2.1"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
